qaoa_solutions.ipynb

--- a/qaoa_solutions.ipynb
+++ b/qaoa_solutions.ipynb
@@ -686,6 +686,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "We can visualize the `run_exp` workflow on the Covalent UI once we've dispatched it. It automatically generates a directed acyclic graph, or DAG, showing the relationships between all electrons in the workflow.\n",
+    "![run_exp_dag](run_exp_dag.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "___\n",
     "## Dispatching the Workflow\n",
     "\n",
@@ -851,6 +859,14 @@
     "            beta_list.append(params[1])\n",
     "        compare_optimizers.append(loss_history)\n",
     "    return compare_optimizers, alpha_list, beta_list\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We can again visualize our workflow from the Covalent UI.\n",
+    "![optimize_dag](optimize_dag.png)"
    ]
   },
   {
